[project]
name = "propellant-properties-script"
version = "0.1.0"
description = ""
authors = [
    {name = "Felipe Bogaerts de Mattos",email = "me@felipebm.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "rocketcea (>=1.2.1,<2.0.0)",
    "coolprop (>=6.7.0,<7.0.0)",
    "numpy (>=2.2.4,<3.0.0)",
    "plotly (>=6.0.1,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
